Optimize application global menu

--- a/topbar/CMakeLists.txt
+++ b/topbar/CMakeLists.txt
@@ -8,9 +8,24 @@ set(SRCS
     mainpanel.cpp
     pluginmanager.h
     pluginmanager.cpp
-
-    volume/volumewidget.cpp
-    volume/volumewidget.h
+    appmenuwidget.cpp
+    appmenuwidget.h
+    appmenu/appmenumodel.h
+    appmenu/appmenumodel.cpp
+    appmenu/dbusmenuimporter.h
+    appmenu/dbusmenuimporter.cpp
+    appmenu/dbusmenu_interface.h
+    appmenu/dbusmenu_interface.cpp
+    appmenu/dbusmenushortcut_p.h
+    appmenu/dbusmenushortcut_p.cpp
+    appmenu/dbusmenutypes_p.h
+    appmenu/dbusmenutypes_p.cpp
+    appmenu/menuimporteradaptor.h
+    appmenu/menuimporteradaptor.cpp
+    appmenu/menuimporter.h
+    appmenu/menuimporter.cpp
+    appmenu/utils.cpp
+    appmenu/utils_p.h
 )
 
 add_executable(${TARGET} ${SRCS} resources.qrc)
@@ -22,8 +37,12 @@ target_link_libraries(${TARGET}
     KF5::DBusAddons
     KF5::WindowSystem
 
-    ${PULSEAUDIO_LIBRARY}
-    dbusmenu-qt5
+    ${X11_LIBRARIES}
+    ${XCOMPOSITE_LDFLAGS}
+    ${XDAMAGE_LIBRARIES}
+    ${XRENDER_LIBRARIES}
+    ${XCB_LIBRARIES}
+    ${XCB_EWMH_LIBRARIES}
 )
 
 install(TARGETS ${TARGET} DESTINATION /usr/bin)
