Make menubar not transparent, reduce height

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,6 @@ add_subdirectory(src)
 add_subdirectory(plugin-datetime)
 add_subdirectory(plugin-statusnotifier)
 add_subdirectory(plugin-volume)
-add_subdirectory(plugin-battery)
+# add_subdirectory(plugin-battery)
 
 install(FILES ${INTERFACES} DESTINATION /usr/include/panda-statusbar)
