--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,5 +22,6 @@ task:
     - rm -rf Menu.AppDir/usr/include
     - find Menu.AppDir/
     - zip --symlinks -r Menu_FreeBSD.zip Menu.AppDir/
-    - curl --upload-file ./Menu_FreeBSD.zip https://transfer.sh/Menu_FreeBSD.zip
-  only_if: $CIRRUS_BRANCH == 'actionsearch'
+    # curl --upload-file ./Filer_FreeBSD.zip https://transfer.sh/Filer_FreeBSD.zip
+    - case "$CIRRUS_BRANCH" in *pull/*) echo skipping since PR ;; * ) wget https://github.com/tcnksm/ghr/files/5247714/ghr.zip ; unzip ghr.zip ; rm ghr.zip ; ./ghr -replace -t "${GITHUB_TOKEN}" -u "${CIRRUS_REPO_OWNER}" -r "${CIRRUS_REPO_NAME}" -c "${CIRRUS_CHANGE_IN_REPO}" continuous "${CIRRUS_WORKING_DIR}"/build/*zip ; esac
+  only_if: $CIRRUS_TAG != 'continuous'
