--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -15,10 +15,10 @@ task:
     - mkdir build ; cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr
     - make -j$(sysctl -n hw.ncpu)
-    - make DESTDIR=Menubar.AppDir -j$(sysctl -n hw.ncpu) install
+    - make DESTDIR=Menu.AppDir -j$(sysctl -n hw.ncpu) install
     - mkdir -p Menu.AppDir/usr/share/icons/hicolor/64x64/apps/
     - cp ../Menubar.png Menu.AppDir/usr/share/icons/hicolor/64x64/apps/
-    - ( cd Menu.AppDir/ ; ln -s ./usr/bin/panda-statusbar ./AppRun )
+    - ( cd Menu.AppDir/usr/bin/ ; ln -s ./panda-statusbar ../../AppRun )
     - rm -rf Menu.AppDir/usr/include
     - find Menu.AppDir/
     - zip --symlinks -r Menu_FreeBSD.zip Menu.AppDir/
