Add Shutdown application

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,6 +8,7 @@ env:
 task:
   # This name gets reported as a build status in GitHub
   name: freebsd-12-1-release-amd64
+  auto_cancellation: false
   stateful: false
   setup_script:
     - pkg install -y curl wget zip pkgconf cmake qt5-x11extras qt5-qmake qt5-widgets qt5-buildtools qt5-concurrent kf5-kdbusaddons kf5-kwindowsystem libdbusmenu-qt5 pulseaudio pulseaudio-qt
@@ -20,8 +21,14 @@ task:
     - cp ../Menubar.png Menu.AppDir/usr/share/icons/hicolor/64x64/apps/
     - ( cd Menu.AppDir/usr/bin/ ; ln -s ./panda-statusbar ../../AppRun )
     - rm -rf Menu.AppDir/usr/include
+    - mkdir -p ../Shutdown/build
+    - cd ../Shutdown/build
+    - cmake ..
+    - make -j$(sysctl -n hw.ncpu)
+    - cd -
+    - cp ../Shutdown/build/Shutdown Menu.AppDir/usr/bin/
     - find Menu.AppDir/
     - zip --symlinks -r Menu_FreeBSD.zip Menu.AppDir/
     # curl --upload-file ./Filer_FreeBSD.zip https://transfer.sh/Filer_FreeBSD.zip
-    - case "$CIRRUS_BRANCH" in *pull/*) echo skipping since PR ;; * ) wget https://github.com/tcnksm/ghr/files/5247714/ghr.zip ; unzip ghr.zip ; rm ghr.zip ; ./ghr -replace -t "${GITHUB_TOKEN}" -u "${CIRRUS_REPO_OWNER}" -r "${CIRRUS_REPO_NAME}" -c "${CIRRUS_CHANGE_IN_REPO}" continuous "${CIRRUS_WORKING_DIR}"/build/*zip ; esac
+    - case "$CIRRUS_BRANCH" in *pull/*) echo skipping since PR ;; * ) wget https://github.com/tcnksm/ghr/files/5247714/ghr.zip ; unzip ghr.zip ; rm ghr.zip ; ./ghr -t "${GITHUB_TOKEN}" -u "${CIRRUS_REPO_OWNER}" -r "${CIRRUS_REPO_NAME}" -c "${CIRRUS_CHANGE_IN_REPO}" continuous "${CIRRUS_WORKING_DIR}"/build/*zip ; esac
   only_if: $CIRRUS_TAG != 'continuous'
