--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -19,7 +19,7 @@ task:
     - make DESTDIR=Menu.AppDir -j$(sysctl -n hw.ncpu) install
     - mkdir -p Menu.AppDir/usr/share/icons/hicolor/64x64/apps/
     - cp ../Menubar.png Menu.AppDir/usr/share/icons/hicolor/64x64/apps/
-    - ( cd Menu.AppDir/ ; ln -s usr/bin/panda-statusbar AppRun )
+    - ( cd Menu.AppDir/ ; ln -s usr/bin/menubar AppRun )
     - rm -rf Menu.AppDir/usr/include
     - mkdir -p ../Shutdown/build
     - cd ../Shutdown/build
