--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Concurrent REQUIRED)
 find_package(Qt5X11Extras REQUIRED)
 find_package(Qt5DBus REQUIRED)
+find_package(Qt5LinguistTools REQUIRED)
 find_package(KF5DBusAddons REQUIRED)
 find_package(KF5WindowSystem REQUIRED)
 find_package(XCB REQUIRED COMPONENTS xcb xcb-util xcb-damage)
