Create and install translations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -41,6 +41,16 @@ set(SRCS
 
 qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} translations/menubar_de.ts)
 
+# Create TS_FILES variable that contains all .ts files
+file(GLOB TS_FILES translations/*.ts)
+
+# Create/update .ts files from the source code
+qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
+# message(FATAL_ERROR "${QM_FILES}")
+
+# Compile .ts to .qm
+qt5_add_translation(TRANSLATION_QM ${TS_FILES})
+
 add_custom_target(translations ALL DEPENDS ${QM_FILES})
 
 add_custom_target(resources ALL DEPENDS ${RESOURCE_FILES})
