Try to fix https://github.com/helloSystem/Menu/issues/89

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,7 +55,7 @@ add_custom_target(translations ALL DEPENDS ${TRANSLATION_QM})
 
 add_custom_target(resources ALL DEPENDS ${RESOURCE_FILES})
 
-add_dependencies(resources translations)
+# add_dependencies(resources translations)
 
 add_executable(${TARGET} ${SRCS} resources.qrc)
 
