Show thumbnails for AppImages
TODO: Request missing thumbnails

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ set(SRCS
     qtsingleapplication/qtsingleapplication.h
     qtsingleapplication/qtsingleapplication.cpp
     qtsingleapplication/qtlocalpeer.cpp
+    thumbnails.cpp
 )
 
 # Create TS_FILES variable that contains all .ts files
